force-app/main/default/objects/VendaContaAzul__c/VendaContaAzul__c.object-meta.xml
<CustomObject>
    <label>Venda Conta Azul</label>
    <nameField>
        <label>Número Venda</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendas Conta Azul</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>