force-app/main/default/objects/VendaContaAzul__c/fields/DataEmissao__c.field-meta.xml
<CustomField>
    <fullName>DataEmissao__c</fullName>
    <label>Data Venda</label>
    <type>Date</type>
</CustomField>