force-app/main/default/objects/VendaContaAzul__c/fields/IDEventoFinanceiro__c.field-meta.xml
<CustomField>
    <fullName>IDEventoFinanceiro__c</fullName>
    <description>ID do Evento Financeiro correspondente no Conta Azul, usado para buscar parcelas.</description>
    <label>ID Evento Financeiro (CA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>