force-app/main/default/objects/VendaContaAzul__c/fields/Servico__c.field-meta.xml
<CustomField>
    <fullName>Servico__c</fullName>
    <label>Serviço</label>
    <referenceTo>Servico__c</referenceTo>
    <relationshipLabel>Vendas Conta Azul</relationshipLabel>
    <relationshipName>VendasContaAzul</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>