force-app/main/default/objects/VendaContaAzul__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
<!-- Alterado para false para aceitar novos valores do ERP sem quebrar -->
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
                <default>true</default>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>